--- a/core/traefik-data/traefik.yml
+++ b/core/traefik-data/traefik.yml
@@ -19,7 +19,7 @@ entryPoints:
 
 providers:
   docker:
-    endpoint: "unix:///var/run/docker.sock"
+    swarmMode: true
     exposedByDefault: false
   file:
     filename: /configurations/dynamic.yml
