--- a/core/docker-compose.yml
+++ b/core/docker-compose.yml
@@ -6,8 +6,14 @@ services:
     networks:
       - proxy
     ports:
-      - 80:80
-      - 443:443
+      # Listen on port 80, default for HTTP, necessary to redirect to HTTPS
+      - target: 80
+        published: 80
+        mode: host
+      # Listen on port 443, default for HTTPS
+      - target: 443
+        published: 443
+        mode: host
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
@@ -19,14 +25,16 @@ services:
       replicas: 1
       placement:
         constraints: [node.role == manager]
-    labels:
-      - "traefik.enable=true"
-      - "traefik.docker.network=proxy"
-      - "traefik.http.routers.traefik-secure.entrypoints=websecure"
-      # [REQUIRED] - THAY ĐỔI DOMAIN TRAEFIK
-      - "traefik.http.routers.traefik-secure.rule=Host(`traefik.domain.com`)"
-      - "traefik.http.routers.traefik-secure.middlewares=user-auth@file"
-      - "traefik.http.routers.traefik-secure.service=api@internal"
+      labels:
+        - "traefik.enable=true"
+        - "traefik.docker.network=proxy"
+        - "traefik.http.routers.traefik-secure.entrypoints=websecure"
+        # [REQUIRED] - THAY ĐỔI DOMAIN TRAEFIK
+        - "traefik.http.routers.traefik-secure.rule=Host(`traefik.domain.com`)"
+        - "traefik.http.routers.traefik-secure.middlewares=user-auth@file"
+        - "traefik.http.routers.traefik-secure.service=api@internal"
+        # Define the port inside of the Docker service to use
+        - "traefik.http.services.traefik-public.loadbalancer.server.port=8080"
 
   agent:
     image: portainer/agent
@@ -34,8 +42,8 @@ services:
       # REQUIRED: Should be equal to the service name prefixed by "tasks." when
       # deployed inside an overlay network
       AGENT_CLUSTER_ADDR: tasks.agent
-      # AGENT_PORT: 9001
-      # LOG_LEVEL: debug
+      AGENT_PORT: 9001
+      LOG_LEVEL: debug
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - /var/lib/docker/volumes:/var/lib/docker/volumes
@@ -60,14 +68,14 @@ services:
       replicas: 1
       placement:
         constraints: [node.role == manager]
-    labels:
-      - "traefik.enable=true"
-      - "traefik.docker.network=proxy"
-      - "traefik.http.routers.portainer-secure.entrypoints=websecure"
-      # [REQUIRED] - THAY ĐỔI DOMAIN PORTAINER
-      - "traefik.http.routers.portainer-secure.rule=Host(`portainer.domain.com`)"
-      - "traefik.http.routers.portainer-secure.service=portainer"
-      - "traefik.http.services.portainer.loadbalancer.server.port=9000"
+      labels:
+        - "traefik.enable=true"
+        - "traefik.docker.network=proxy"
+        - "traefik.http.routers.portainer-secure.entrypoints=websecure"
+        # [REQUIRED] - THAY ĐỔI DOMAIN PORTAINER
+        - "traefik.http.routers.portainer-secure.rule=Host(`portainer.domain.com`)"
+        - "traefik.http.routers.portainer-secure.service=portainer"
+        - "traefik.http.services.portainer.loadbalancer.server.port=9000"
 
 networks:
   proxy:
